--- a/src/uu/renice/Cargo.toml
+++ b/src/uu/renice/Cargo.toml
@@ -2,8 +2,14 @@
 name = "uu_renice"
 version = "0.0.1"
 edition = "2021"
+authors = ["uutils developers"]
+license = "MIT"
+description = "renice ~ (uutils) Alter priority of running processes"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/uutils/procps"
+repository = "https://github.com/uutils/procps/tree/main/src/uu/renice"
+keywords = ["bsdutils", "uutils", "cross-platform", "cli", "utility"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 libc = { workspace = true }
